--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,6 +1,13 @@
 ﻿// sizes
 $base-size: 16px;
 
+$xsm-spacing: .5rem;
+$sm-spacing: .75rem;
+$md-spacing: 1rem;
+$lg-spacing: 1.5rem;
+$xlg-spacing: 2rem;
+$xxlg-spacing: 3rem;
+
 // font
 $font-family-serif: 'Old Standard TT', serif;
 $font-family-sans-serif: 'Ubuntu', sans-serif;
