--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,13 @@
-﻿// Base Styles
+﻿
+
+
+
+
+
+
+
+
+// Base Styles
 @import 'base/_variables.scss';
 @import 'base/_mixins.scss';
 @import 'base/_core.scss';
