--- a/css/base/_mixins.scss
+++ b/css/base/_mixins.scss
@@ -5,4 +5,47 @@
           border-radius: $radius;
 }
 
+@mixin spacing($type, $label, $size, $location){
+    .#{$type}-#{$label}-#{$location} {
+        margin-#{$location}: $size;
+    }
+}
+
 // .box { @include border-radius(10px); }
+
+/*@mixin bp-large {
+  @media only screen and (max-width: 60em) {
+    @content;
+  }
+}
+
+@mixin bp-medium {
+  @media only screen and (max-width: 40em) {
+    @content;
+  }
+}
+
+@mixin bp-small {
+  @media only screen and (max-width: 30em) {
+    @content;
+  }
+}
+
+.sidebar {
+  width: 60%;
+  float: left;
+  margin: 0 2% 0 0;
+  @include bp-small {
+    width: 100%;
+    float: none;
+    margin: 0;
+  }
+}
+
+.topbar {
+    @include bp-small {
+    width: 100%;
+    float: none;
+    margin: 0;
+  }
+}*/
