--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -25,3 +25,5 @@ $color-white: #fff;
 $color-dark-gray: #484848;
 $color-medium-gray: #989898;
 $color-medium-lite: #F0F0F0;
+
+$header-height: 60px;
