--- a/css/main.scss
+++ b/css/main.scss
@@ -1,18 +1,12 @@
-﻿
-
-
-
-
-
-
-
-
-// Base Styles
+﻿// Base Styles
 @import 'base/_variables.scss';
 @import 'base/_mixins.scss';
 @import 'base/_core.scss';
+@import 'base/_btn.scss';
 @import 'base/_grid.scss';
 @import 'base/_helper-classes.scss';
 
 // Components 
+@import 'components/_off-canvas.scss';
+@import 'components/_site-nav.scss';
 @import 'components/_background-image.scss';
