--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -7,6 +7,7 @@ $md-spacing: 1rem;
 $lg-spacing: 1.5rem;
 $xlg-spacing: 2rem;
 $xxlg-spacing: 3rem;
+$half: 50%;
 
 // font
 $font-family-serif: 'Old Standard TT', serif;
