--- a/css/base/_mixins.scss
+++ b/css/base/_mixins.scss
@@ -11,6 +11,14 @@
     }
 }
 
+@mixin transition($args...) {
+  -webkit-transition: $args;
+  -moz-transition: $args;
+  -ms-transition: $args;
+  -o-transition: $args;
+  transition: $args;
+}
+
 // .box { @include border-radius(10px); }
 
 /*@mixin bp-large {
