--- a/css/prototype.scss
+++ b/css/prototype.scss
@@ -2,35 +2,51 @@
 @import 'base/_variables.scss';
 @import 'base/_mixins.scss';
 @import 'base/_core.scss';
+@import 'base/_helper-classes.scss';
+
+// Components
+@import "components/background-image";
 
 // Prototype
+$headerSticky: 60px;
+
 body {
     background: #dcf2f9;
+    padding-top: $headerSticky;
 }
+
+.border-box {
+    box-sizing: border-box;
+}
+
 .header-sticky {
-    height: 40px;
+    @extend .border-box;
+    width: 100%;
+    height: $headerSticky;
+    top: 0;
     padding: 20px 0 0 10px;
     background: #fff;
     box-shadow: 0 2px 2px 1px rgba(0,0,0,.15);
+    position: fixed;
+    z-index: 1;
 }
 
 .header-ad {
     text-align: center;
     div {
         margin: 0 auto;
+        background: $color-primary;
         // mobile
         @media (min-width: 320px) {
             width: 320px;
             height: 35px;
             padding: 15px 0 0;
-            background: red;
         }
         // tablet+
         @media (min-width: 768px) {
             width: 728px;
             height: 55px;
             padding: 35px 0 0;
-            background: pink;
         }
 
     }
@@ -38,14 +54,23 @@ body {
 }
 
 .carousel {
+    @extend .border-box;
+    
+    background: $color-medium-lite;
+    padding: 10px;
+    text-align: center;
     // mobile
     @media (min-width: 320px) {
         height: calc(100vh - 110px);
-        background: black;
     }
     // tablet+
     @media (min-width: 768px) {
         height: calc(100vh - 150px);
-        background: green;
     }
+}
+
+footer {
+    @extend .border-box;
+    background: $color-secondary;
+    padding: 10px;
 }
