--- a/css/main.css
+++ b/css/main.css
@@ -76,9 +76,6 @@ img {
   .btn.btn-block {
     display: block; }
 
-.off-canvas-trigger {
-  display: none; }
-
 section {
   padding: 2rem;
   width: 100%;
@@ -196,7 +193,10 @@ ul.clear-styles, ul.clear-styles li {
 .margin-xxlg-left {
   margin-left: 3rem; }
 
-@media screen and (min-width: 300px) and (max-width: 768px) {
+.off-canvas-trigger {
+  display: none; }
+
+@media screen and (min-width: 250px) and (max-width: 768px) {
   .off-canvas {
     position: relative;
     transform: translate3d(0, 0, 0);
@@ -224,25 +224,60 @@ ul.clear-styles, ul.clear-styles li {
         opacity: 1;
         transition: opacity 400ms ease-in; } }
 
-.site-nav .btn {
-  margin-right: 5px; }
-  .site-nav .btn.link-resume {
-    border-left: solid 3px #408CCC; }
-  .site-nav .btn.link-prototypes {
-    border-left: solid 3px #FF6F69; }
+.site-header {
+  position: absolute;
+  top: 0;
+  left: 0; }
+  @media screen and (min-width: 250px) {
+    .site-header {
+      text-align: center;
+      padding: 0 30px; } }
+  @media screen and (min-width: 768px) {
+    .site-header {
+      text-align: left;
+      padding: 25px 20px; }
+      .site-header .header-logo {
+        font-size: 26px; } }
 
-@media screen and (max-width: 760px) {
-  .site-nav li {
-    display: block;
-    width: 100%;
-    border-bottom: solid 1px transparent; }
+.site-nav {
+  position: relative; }
   .site-nav .btn {
-    width: 100%; } }
-
-@media screen and (min-width: 768px) {
-  .site-nav li {
-    display: table-cell;
-    width: initial; } }
+    margin-right: 5px; }
+    .site-nav .btn.link-resume:before {
+      content: '';
+      display: block;
+      height: 5px;
+      width: 0;
+      position: absolute;
+      left: 50%;
+      top: 0;
+      transition: all 300ms ease-in;
+      /*background:-webkit-gradient(linear, right top, background-image: -webkit-gradient(
+	                linear,
+	                right top,
+	                left top,
+	                color-stop(0, #FF6E69),
+	                color-stop(1, #A16D87)
+                );*/
+      background-image: -o-linear-gradient(left, #FF6E69 0%, #A16D87 100%);
+      background-image: -moz-linear-gradient(left, #FF6E69 0%, #A16D87 100%);
+      background-image: -webkit-linear-gradient(left, #FF6E69 0%, #A16D87 100%);
+      background-image: -ms-linear-gradient(left, #FF6E69 0%, #A16D87 100%);
+      background-image: linear-gradient(to left, #FF6E69 0%, #A16D87 100%); }
+    .site-nav .btn.link-resume:hover:before {
+      background: #408CCC;
+      transition: all 300ms ease-in;
+      width: 100%;
+      left: 0; }
+    .site-nav .btn.link-prototypes {
+      border-bottom: solid 3px #FF6F69; }
+  @media screen and (max-width: 760px) {
+    .site-nav .btn {
+      width: 100%; } }
+  @media screen and (min-width: 768px) {
+    .site-nav {
+      padding: 20px 0;
+      text-align: center; } }
 
 .background-image {
   background-repeat: no-repeat; }
