--- a/css/main.scss
+++ b/css/main.scss
@@ -8,5 +8,6 @@
 
 // Components 
 @import 'components/_off-canvas.scss';
+@import 'components/_site-header.scss';
 @import 'components/_site-nav.scss';
 @import 'components/_background-image.scss';
