site nav button animation

--- a/css/base/_btn.scss
+++ b/css/base/_btn.scss
@@ -4,6 +4,7 @@
     padding: $xsm-spacing;
     box-sizing: border-box;
     text-decoration: none;
+    border-radius: .2rem;
     &.btn-block {
         display: block;
     }
