--- a/css/components/_site-header.scss
+++ b/css/components/_site-header.scss
@@ -1,15 +1,20 @@
 ﻿.site-header {
-    position: absolute;
+    
+    position: fixed;
     top: 0;
     left: 0;
+    z-index: 2;
+    width: 100%;
+    box-sizing: border-box;
     @media screen and (min-width: 250px) {
         text-align: center;
-        padding: 0 30px;
+        padding: 15px 30px;
     }
 
     @media screen and (min-width: 768px) {
         text-align: left;
         padding: 25px 20px;
+        
         .header-logo {
             font-size: 26px;
         }
